--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Document</title>
     </head>
     <body>
+        <!-- Hello world -->
         <header>
             <nav>
                 <div class="toggle">
