Commit start good

--- a/index.html
+++ b/index.html
@@ -9,27 +9,56 @@
         <title>Document</title>
     </head>
     <body>
-        <!-- Hello world -->
         <header>
-            <nav>
-                <div class="toggle">
-                    <i class="open"> Menu</i> 
+            <video
+                class="showcase"
+                autoplay
+                muted
+                loop
+                src="img/background.mp4"
+            ></video>
+            <div class="box">
+                <div class="containerParent">
+                    <div class="container">
+                        <nav>
+                            <div class="toggle">
+                                <i class="open"> Menu</i>
+                            </div>
+                            <!-- <ul>
+                                <li>
+                                    <a href="">Vue d'ensemlbe</a>
+                                </li>
+                                <li>
+                                    <a href="">Mes Travaux</a>
+                                </li>
+                                <li>
+                                    <a href="">Tarif & Devis</a>
+                                </li>
+                                <li>
+                                    <a href="">Location</a>
+                                </li>
+                            </ul> -->
+                        </nav>
+                        <h1>
+                            Lenny
+                            <br>
+                            Ruprecht
+                        </h1>
+                        <a href="">Contact</a>
+                    </div>
+                    <div class="rec">
+                        <h1>
+                            REC
+                            <br>
+                            00:00:00:00
+                        </h1>
+                    </div>
+                    <div class="container container-credit">
+                        <p>Product By Lenny Ruprecht</p>
+                        <p>©Lenny Ruprecht</p>
+                    </div>
                 </div>
-                <ul class="menu ">
-                    <li>
-                        <a href="">Vue d'ensemlbe</a>
-                    </li>
-                    <li>
-                        <a href="">Mes Travaux</a>
-                    </li>
-                    <li>
-                        <a href="">Tarif & Devis</a>
-                    </li>
-                    <li>
-                        <a href="">Location</a>
-                    </li>
-                </ul>
-            </nav>
+            </div>
         </header>
         <script src="js/app.js"></script>
     </body>
