ajout de class au h1 rec

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="">Contact</a>
                     </div>
                     <div class="rec">
-                        <h1>
+                        <h1 class="RectTitle">
                             REC
                             <br>
                             00:00:00:00
